<?xml version="1.0"?>
<package format="2">
  <name>gbx_dtu</name>
  <version>0.0.1</version>
  <description>The gbx_dtu package</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>navigation_msgs</depend>
  <depend>ranger_msgs</depend>
  <export>
  </export>
</package>