<?xml version="1.0"?>
<package format="2">
  <name>navigation_tools</name>
  <version>0.0.0</version>
  <description>The navigation_tools package</description>
  <maintainer email="lsy@todo.todo">lsy</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <export>
    <nodelet plugin="${prefix}/cloud_transit_nodelet.xml" />
    <nodelet plugin="${prefix}/cloud_intensity_filter_nodelet.xml" />
  </export>
</package>
